// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Link Blank Target 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <a
      class="sc-eGJWMs cCoTdW sc-csTbgd gyTKxM"
      color="primary.main"
      href="https://balena.io"
      rel="noopener"
      target="_blank"
    >
      https://balena.io
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Link Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <a
      class="sc-eGJWMs cCoTdW sc-csTbgd gyTKxM"
      color="primary.main"
      href="#"
    >
      Internal link
    </a>
  </div>
</div>
`;

exports[`Storyshots Core/Link Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <a
      class="sc-eGJWMs lotDuK sc-csTbgd gyTKxM"
      color="primary.main"
      disabled=""
    />
  </div>
</div>
`;
